# Socket-Programming

./: .gitignore  CMakeLists.txt  README.md
src/client/: client.c  tcp_client.c  tcp_client.cpp  udp_client.c  udp_client.cpp
src/common/: common.c  common.cpp  common.h  socktoolspec.h
src/server/: server.c  tcp_server.cpp  udp_server.cpp
